--- a/features/layout/Card/Card.module.css
+++ b/features/layout/Card/Card.module.css
@@ -1,23 +1,29 @@
-.card {
-  @apply p-4
-    flex
-    flex-col
-    justify-center
-    self-stretch
-    rounded-xl
-    border
-    border-gray-300
-    text-gray-800
-    transition-all
-    no-underline;
-}
+@layer components {
+  .card {
+    @apply p-4
+      flex
+      flex-col
+      justify-center
+      self-stretch
+      rounded-xl
+      border
+      border-gray-300
+      text-gray-800
+      transition-all
+      no-underline;
+  }
 
-.card:hover {
-  @apply border-gray-400
-    shadow;
-}
+  .card > * {
+    @apply my-1;
+  }
 
-.card:active {
-  @apply border-gray-400
-    shadow-sm;
+  .card:hover {
+    @apply border-gray-400
+      shadow;
+  }
+
+  .card:active {
+    @apply border-gray-400
+      shadow-sm;
+  }
 }
